# pipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/: blob_crud.py  conf.py  config.py  config_old.py  extract_billing_multicloud.py  main.py  upload_to_bronze.py
src/bronze-layer/: bronze_reports.py  explore-bronze.ipynb  explore_bronze.ipynb  extract.py  extract_aws.py  extract_azure.py  extract_gcp.py  get_gcp_query.py  upload_to_bronze.py
src/gold-layer/: download_tables.py  reindex_fact.py
src/silver-layer/: az-temp.py  clean_az_data.py  clean_data.py  download_blob.py  explore_silver.ipynb  extract.py  split_azure_data.py  split_data.py  upload_azu_tables_silver.py  upload_silver.py
